# documentation/swagger.yaml
@@ -2156,6 +2156,43 @@ paths:
         '500':
           description: Internal Server Error
 
+  /course/delete/{course_id}:
+    put:
+      summary: Get course by ID
+      tags:
+        - Course
+      description: Retrieve information about a course based on its ID.
+      parameters:
+        - name: course_id
+          in: path
+          description: ID of the course to retrieve
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              example:
+                status: true
+                message: success!
+                err: null
+                data:
+                  updatedCourse: 
+                    course_id: 1
+                    title: Expert in iOS
+                    deskripsi: iOS adalah sistem operasi apple
+                    is_visible: false
+        '400':
+          description: Failed response
+          content:
+            application/json:
+              example:
+                status: false
+                message: bad request
+                err: course id not found!
+                data: null   
   /course/{course_id}:
     get:
       summary: Get course by ID
